class AppLocale {
  static var home = "Home";

  static var todoList = "Todo List";

  static var title= "Title";

  static var description= "Description";

  static var priorityLevel= "Priority Level";

  static var newTodo = "Create Todo";

  static var create= "Create";

  static var editTodo= "Edit Todo";

  static var edit= "Edit";

  static var todo= "Todo";

  static var delete= "Delete";

  static var low = "Low";

  static var medium = "Medium";

  static var high = "High";

  static var markAsCompleted = "Mark as complete";

  static var date = "Date";

  static var graph = "Graph";

  static var thisFieldIsRequired = "This field is required.";

  static var noData= "No data yet";

  static var all = "All";

  static var open = "Open";

  static var closed = "Closed";
}
